WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
82738
[EFL] keycode translation is wrong for function keys
https://bugs.webkit.org/show_bug.cgi?id=82738
Summary
[EFL] keycode translation is wrong for function keys
Sudarsana Nagineni (babu)
Reported
2012-03-30 09:25:39 PDT
The following code sets wrong keycode value for function keys. // Set F_XX keys to the windowsKeyMap.
>> for (unsigned int i = 1; i < 25; i++) { > String key = "F" + String::number(i); >> windowsKeyMap().set(key, VK_F1 + i);
Vk_F1 keycode is equivalent to F1, so it should be 'VK_F1 + i - 1' instead of 'VK_F1 + i'.
Attachments
Patch
(2.35 KB, patch)
2012-03-30 09:46 PDT
,
Sudarsana Nagineni (babu)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sudarsana Nagineni (babu)
Comment 1
2012-03-30 09:46:42 PDT
Created
attachment 134832
[details]
Patch Fix keycode translation for function keys
Raphael Kubo da Costa (:rakuco)
Comment 2
2012-03-30 12:50:06 PDT
Comment on
attachment 134832
[details]
Patch Looks good, thanks.
WebKit Review Bot
Comment 3
2012-04-05 01:47:36 PDT
Comment on
attachment 134832
[details]
Patch Clearing flags on attachment: 134832 Committed
r113300
: <
http://trac.webkit.org/changeset/113300
>
WebKit Review Bot
Comment 4
2012-04-05 01:47:41 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug