[EFL] keycode translation is wrong for function keys https://bugs.webkit.org/show_bug.cgi?id=82738

Source/WebCore:

This patch fixes keycode translation for function keys.

Patch by Sudarsana Nagineni <sudarsana.nagineni@linux.intel.com> on 2012-04-05
Reviewed by Philippe Normand.

Test: fast/events/keydown-function-keys.html

* platform/efl/EflKeyboardUtilities.cpp:
(WebCore::createWindowsKeyMap):

LayoutTests:

Unskip fast/events/keydown-function-keys.html

Patch by Sudarsana Nagineni <sudarsana.nagineni@linux.intel.com> on 2012-04-05
Reviewed by Philippe Normand.

* platform/efl/Skipped:

Canonical link: https://commits.webkit.org/100636@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113300 268f45cc-cd09-0410-ab3c-d52691b4dbfc